--- a/InstaSMart/src/app/products/products.component.html
+++ b/InstaSMart/src/app/products/products.component.html
@@ -8,7 +8,7 @@
     
     <div class="_37K3-p" >
 
-        <div class="_3YgSsQ" *ngFor="let product of allProducts$ | async;let index=index;" style="width: 220px;">
+        <div class="_3YgSsQ" *ngFor="let product of filteredList;let index=index;" style="width: 220px;">
 
             <div class="_2n7i6c">
 
