--- a/InstaSMart/src/app/products/products.component.css
+++ b/InstaSMart/src/app/products/products.component.css
@@ -1,16 +1,17 @@
 ._37K3-p{
-    /* transition: -webkit-transform .4s ease-in-out; */
+    transition: -webkit-transform .4s ease-in-out;
     transition: transform .4s ease-in-out;
-    /* transition: transform .4s ease-in-out,-webkit-transform .4s ease-in-out; */
-    /* display: -webkit-flex; */
-    /* display: -ms-flexbox; */
+    transition: transform .4s ease-in-out,-webkit-transform .4s ease-in-out;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    /* -webkit-flex-direction: row; */
-    /* -ms-flex-direction: row; */
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
-    /* -webkit-align-items: stretch; */
-    /* -ms-flex-align: stretch; */
-    /* overflow:-moz-hidden-unscrollable; */
+    flex-wrap: wrap;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+   
     
     
 }
