--- a/InstaSMart/src/app/products/view-product/view-product.component.html
+++ b/InstaSMart/src/app/products/view-product/view-product.component.html
@@ -1,5 +1,210 @@
-<div *ngIf="product">
-{{product.id}}
-{{product.name}}
-<img [src]="product.imageUrl" alt="">
+<div class="_2c7YLP UtUXW0 _6t1WKM _3HqJxg">
+    <div class="_1YokD2 _2GoDe3" style="background-color: rgb(255,255,255);padding: 16px;" >
+        <div class="_1YokD2 _3Mn1Gg col-t-12 _78xt5y">
+                <div class="_1AtVbE col-12-12">
+                    <div class="_1ijIJ">
+                                    <div class="_1BweB8">
+                                        <div class="_3kidJX">
+                                            <div class="_3A1TYz" style="height: 120.25px; width: 203.793px; transform: scale(0);">
+                                            </div>
+                                            <div class="CXW8mj _3nMexc" style="height: inherit; width: inherit;">
+                                                <img loading="eager" class="_396cs4 _2amPTt _3qGmMb" [src]="product?.imageUrl">
+                                            </div>
+                                        </div>
+                                    </div>
+                    </div>
+                </div>
+
+
+                <div class="_1AtVbE col-12-12">
+                    <div class="_1p3MFP dTTu2M">
+                        <ul class="row">
+                            <li class="col col-6-12" style="background-color: ff9f00;margin-right: 10px;">
+                                <!-- <form> -->
+                                    <button class="_2KpZ6l _2U9uOA ihZ75k _3AWRsL" type="button" (click)="addToCart(product)">
+                                        <span class="_3iRXzi">
+
+                                        </span>Add To Cart</button>
+                                    <!-- </form> -->
+                                <!-- <button class="_2KpZ6l _2U9uOA _3v1-ww" style="background-color: ff9f00;">
+                                    <span class="_3iRXzi">
+
+                                    </span> Add To Cart
+                                </button> -->
+                            </li> 
+                            <div style="display:inline-block; width: 4px;" ></div>
+                            <li class="col col-6-12">
+                                    <form>
+                                        <button class="_2KpZ6l _2U9uOA ihZ75k _3AWRsL" type="button">
+                                            <span class="_3iRXzi">
+
+                                            </span>Buy Now</button>
+                                        </form>
+                            </li>
+                                </ul>
+                            </div>
+                        </div>
+
+
+
+
+
+        </div>
+
+        <div style="width: 17px;"></div>
+
+
+
+        <div class="_1YokD2 _3Mn1Gg col-8-12" style="padding: 0px 0px 0px 0px 24px;">
+                <div class="_1AtVbE col-12-12">
+                    <div class="aMaAEs">
+                        <div>
+                            <h1 class="yhB1nd">
+                                <span class="B_NuCI">{{product?.name}}</span>
+                            </h1>
+                        </div>
+                        <div class="">
+                            <div class="_3_L3jD">
+                                <div class="gUuXy- _16VRIQ">
+                                    <span id="productRating_LSTSUPFU86ZNY2DSWWGYH121V_SUPFU86ZNY2DSWWG_" class="_1lRcqv">
+                                        <div class="_3LWZlK">{{product?.rating}}
+                                            <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+
+                                            PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0L
+                                            jI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" class="_1wB99o">
+                                        </div>
+                                    </span>
+                                    <span class="_2_R_DZ"><span><span>151 Ratings&nbsp;</span><span class="_13vcmD">&amp;</span>
+                                    <span>&nbsp;8 Reviews</span></span></span></div>
+                                </div><span class="b7864- _2Z07dN"></span></div>
+                                <div class="dyC4hf"><div class="CEmiEU">
+                                    <div class="_25b18c"><div class="_30jeq3 _16Jk6d">{{product?.price|currency:'INR'}}</div>
+                                    <div class="_3I9_wc _2p6lqe">{{product?.oPrice|currency:'INR'}}</div><div class="_3Ay6Sb _31Dcoz">
+                                            <span>{{percentOf(product?.price||1,product?.oPrice||1)}}%off</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="_1V9q7_">
+                                    <div id="price-info-icon" class="_25icda"><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="_3ECE0V">
+                                        <defs>
+                                            <circle id="b" cx="8" cy="8" r="8"></circle>
+                                            <filter id="a" width="130%" height="130%" x="-15%" y="-8.8%" filterUnits="objectBoundingBox">
+                                                <feMorphology in="SourceAlpha" operator="dilate" radius=".4" result="shadowSpreadOuter1"></feMorphology>
+                                                <feOffset dy="1" in="shadowSpreadOuter1" result="shadowOffsetOuter1"></feOffset>
+                                                <feGaussianBlur in="shadowOffsetOuter1" result="shadowBlurOuter1" stdDeviation=".5"></feGaussianBlur>
+                                                <feComposite in="shadowBlurOuter1" in2="SourceAlpha" operator="out" result="shadowBlurOuter1">
+
+                                                </feComposite><feColorMatrix in="shadowBlurOuter1" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0">
+
+                                                </feColorMatrix></filter>
+                                            </defs><g fill="none" fill-rule="evenodd"><g transform="translate(2 1)">
+                                                <use fill="#000" filter="url(#a)" xlink:href="#b"></use><use fill="#FCFCFC" stroke="#000" stroke-opacity=".3" stroke-width=".8" xlink:href="#b"></use>
+                                            </g><text fill="#1D1D1D" font-family="Roboto-Medium, Roboto" font-size="11" font-weight="400" opacity=".59" transform="translate(2 1)">
+                                                <tspan x="6.6" y="12.2">i</tspan></text></g></svg></div></div></div></div></div>
+
+
+                <div class="_1AtVbE col-12-12">
+                    <div class="_3Z0lU8">
+                        <div class="rd9nIL">Available offers
+
+                        </div>
+                    </div>
+                    <div class="_3TT44I">
+                        <div class="WT_FyS">
+                            <div class="XUp0WS">
+                                <span class="_3j4Zjq row">
+                                    <!-- <img src="https://rukminim1.flixcart.com/www/36/36/promos/06/09/2016/c22c9fc4-0555-4460-8401-bf5c28d7ba29.png?q=90" 
+                                    width="18" height="18" class="_3HLfAg"> -->
+                                    <li class="_16eBzU col">
+                                        <span class="u8dYXW">Bank Offer</span>
+                                        <span>5% Cashback on Flipkart Axis Bank Card</span>
+                                        <div class="Bv11UC _1qNw3R">
+                                            <span class="fGhUR2">T&amp;C</span>
+                                        </div>
+                                    </li>
+                                </span>
+                                <span class="_3j4Zjq row">
+                                    <!-- <img src="https://rukminim1.flixcart.com/www/36/36/promos/06/09/2016/c22c9fc4-0555-4460-8401-bf5c28d7ba29.png?q=90"
+                                     width="18" height="18" class="_3HLfAg"> -->
+                                     <li class="_16eBzU col">
+                                        <span class="u8dYXW">Partner Offer</span>
+                                        <span>Purchase now &amp; get a surprise cashback coupon for January / February 2023</span>
+                                        <div class="Bv11UC _1qNw3R">
+                                            <span class="fGhUR2">Know More</span>
+                                        </div>
+                                    </li>
+                                </span>
+                                <span class="_3j4Zjq row">
+                                    <!-- <img src="https://rukminim1.flixcart.com/www/36/36/promos/06/09/2016/c22c9fc4-0555-4460-8401-bf5c28d7ba29.png?q=90" 
+                                    width="18" height="18" class="_3HLfAg"> -->
+                                    <li class="_16eBzU col">
+                                        <span class="u8dYXW">Partner Offer</span>
+                                        <span>Sign up for Flipkart Pay Later and get Flipkart Gift Card worth up to ₹1000*</span>
+                                        <div class="Bv11UC _1qNw3R">
+                                            <span class="fGhUR2">Know More</span>
+                                        </div>
+                                    </li>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="_1AtVbE col-12-12">
+                    <div class="row _2WVRLm">
+                        <div class="col col-12-12">
+                            <div class="_1PQN-K">
+                                <div class="_2taUHM">Delivery</div>
+                                <div class="_24N3im">
+                                    <div class="_1tgazt _1LO0H9">
+                                        <div class="bTgKY7 _16ocF5"></div>
+                                        <div class="_2u50Np">
+                                            <div class="hivXmn">
+                                                <svg width="12" height="12" viewBox="0 0 9 12" class="_1kbGNj" 
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill="#2874f0" class="_6xm1dD" 
+                                                d="M4.2 5.7c-.828 0-1.5-.672-1.5-1.5 
+                                                0-.398.158-.78.44-1.06.28-.282.662-.
+                                                44 1.06-.44.828 0 1.5.672 1.5 1.5 0 
+                                                .398-.158.78-.44 1.06-.28.282-.662.
+                                                44-1.06.44zm0-5.7C1.88 0 0 1.88 0 4.2 0 7.35 4.2 12 4.2 12s4.2-4.65 4.2-7.8C8.4
+                                                 1.88 6.52 0 4.2 0z" fill-rule="evenodd"></path>
+                                                </svg><form autocomplete="off" class="N79-rD">
+                                                    <input class="_36yFo0" placeholder="Enter Delivery Pincode"
+                                                     type="text" maxlength="6" id="pincodeInputId" value=""></form>
+                                                     <div class="_2YsvKq _2ggyDI _16ocF5"><svg class="_2LJFE8" viewBox="25 25 50 50">
+                                                        <circle stroke="#0057e7" class="_2XJHnB" cx="50" cy="50" r="10" fill="none" 
+                                                        stroke-width="3" stroke-miterlimit="10"></circle></svg></div>
+                                                        <span class="_2P_LDn" (click)="toggleDate()" >Check<div class="_2OTVHf _1Hhkx7 z0fG_Y _1mQK5h _3BB7xg
+                                                             _3yvRQZ _16ocF5"><div class="_3Oikkn _3_ezix _3Hbb-8">
+                                                                <button class="_2KpZ6l FYrnUt">✕</button>
+                                                            </div></div></span></div></div></div></div></div>
+                                                            <div class="_1SLzzw"><div class="_1OUluu"><ul class="eWlq4L">
+                                                                <div class="_20XEBf"><div *ngIf="showDate" class="_3XINqE">Delivery by<span class="_1TPvTK">
+                                                                    {{deliveryDate}}</span>
+                                                                    <span class="_2-oumo">|</span>
+                                                                    <span class="_1rQTjC">Free</span><span class="_2W3miC _2n0ivQ">₹40
+
+                                                                    </span><div class="Bv11UC"><span class="question">?</span>
+                                                                    </div></div></div></ul></div><div class="_2O5gut">
+                                                                        <span class="YxlyDn">View Details</span></div></div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+
+
+
+
+
+        </div>
+
+
+
+
+    </div>
+
+
+
+
+
 </div>
