--- a/InstaSMart/src/app/header/mini-header/mini-header.component.html
+++ b/InstaSMart/src/app/header/mini-header/mini-header.component.html
@@ -35,7 +35,7 @@
          <a (click)="filter('Books')" style="color: white ;font-weight: 150;">
             Books
          </a> <div style="width: 2%;"></div>
-         <a *ngIf="isAdmin" [routerLink]="['productStore']" style="color: white ;font-weight: 150;">
+         <a *ngIf="isAdmin" [routerLink]="['productStore']" style="color: white ;font-weight: 150;text-decoration: none;">
             Product Store
          </a>
 
