--- a/InstaSMart/src/app/products/view-product/view-product.component.html
+++ b/InstaSMart/src/app/products/view-product/view-product.component.html
@@ -45,6 +45,8 @@
                             </div>
                         </div>
 
+                        <p style="background-color: green;color: white;">{{message}}</p>
+
 
 
 
@@ -116,7 +118,7 @@
                                     width="18" height="18" class="_3HLfAg"> -->
                                     <li class="_16eBzU col">
                                         <span class="u8dYXW">Bank Offer</span>
-                                        <span>5% Cashback on Flipkart Axis Bank Card</span>
+                                        <span>5% Cashback on Amazon ICICI Bank Card</span>
                                         <div class="Bv11UC _1qNw3R">
                                             <span class="fGhUR2">T&amp;C</span>
                                         </div>
@@ -138,7 +140,7 @@
                                     width="18" height="18" class="_3HLfAg"> -->
                                     <li class="_16eBzU col">
                                         <span class="u8dYXW">Partner Offer</span>
-                                        <span>Sign up for Flipkart Pay Later and get Flipkart Gift Card worth up to ₹1000*</span>
+                                        <span>Sign up for Amazon Pay Later and get Amazon Gift Card worth up to ₹1000*</span>
                                         <div class="Bv11UC _1qNw3R">
                                             <span class="fGhUR2">Know More</span>
                                         </div>
