--- a/InstaSMart/src/app/app.component.html
+++ b/InstaSMart/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
-<app-mini-header></app-mini-header>
-<router-outlet></router-outlet>
+<div class="contai">
+   <header>
+    <app-header></app-header>
+    <app-mini-header></app-mini-header>
+   </header>
+<main><router-outlet></router-outlet></main>
+<footer><app-footer class="footer"></app-footer></footer>
+</div>
