--- a/InstaSMart/src/app/products/products.component.html
+++ b/InstaSMart/src/app/products/products.component.html
@@ -1,4 +1,50 @@
 
+  
+
+
+<ngb-carousel *ngIf="images" [interval]="3000" [pauseOnHover]="true">
+	<ng-template ngbSlide *ngFor="let i of images">
+		<div class="picsum-img-wrapper">
+			<!-- <img [src]="i" alt="Random first slide" /> -->
+            <div class="_2B-T72">
+                <div>
+                        <div class="CXW8mj" style="height: 400px; width: 800px;">
+                                <img loading="eager" class="_396cs4" alt="Not Found" [src]="i">
+
+                        </div>
+
+                </div>
+
+        </div>
+		</div>
+		<!-- <div class="carousel-caption">
+			<h3>First slide label</h3>
+			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+		</div> -->
+	</ng-template>
+	<!-- <ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img [src]="images[1]" alt="Random second slide" />
+		</div>
+		<div class="carousel-caption">
+			<h3>Second slide label</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</div>
+	</ng-template> -->
+	<!-- <ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img [src]="images[2]" alt="Random third slide" />
+		</div>
+		<div class="carousel-caption">
+			<h3>Third slide label</h3>
+			<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+		</div>
+	</ng-template> -->
+</ngb-carousel>
+
+
+
+
 
 
 
@@ -6,9 +52,9 @@
     <body style="border: 1px solid white;">
         
     
-    <div class="_37K3-p" >
+    <div class="_37K3-p">
 
-        <div class="_3YgSsQ" *ngFor="let product of filteredList;let index=index;" style="width: 220px;">
+        <div class="_3YgSsQ" *ngFor="let product of filteredList;let index=index;" style="width: 250px;">
 
             <div class="_2n7i6c">
 
