--- a/InstaSMart/src/app/products/view-product/view-product.component.html
+++ b/InstaSMart/src/app/products/view-product/view-product.component.html
@@ -35,7 +35,7 @@
                             <div style="display:inline-block; width: 4px;" ></div>
                             <li class="col col-6-12">
                                     <form>
-                                        <button class="_2KpZ6l _2U9uOA ihZ75k _3AWRsL" type="button">
+                                        <button class="_2KpZ6l _2U9uOA ihZ75k _3AWRsL" type="button" (click)="buyNow(product)">
                                             <span class="_3iRXzi">
 
                                             </span>Buy Now</button>
