--- a/InstaSMart/src/app/footer/footer.component.html
+++ b/InstaSMart/src/app/footer/footer.component.html
@@ -3,10 +3,10 @@
     <p>
         <mat-toolbar style="background-color: rgb(37, 47, 61);height: 40px;">
             <div style="width: 40%;"></div>
-         <a style="color: white ;font-weight: 150;text-decoration: none;" [routerLink]="['about-us']">
+         <a id="aboutus" style="color: white ;font-weight: 150;text-decoration: none;" routerLink="about-us">
             About Us
          </a> <div style="width: 2%;"></div>
-         <a  style="color: white ;font-weight: 150;text-decoration: none;" [routerLink]="['contact-us']">
+         <a  id="contactus" style="color: white ;font-weight: 150;text-decoration: none;" routerLink="contact-us">
             Contact Us
          </a>
 
