--- a/InstaSMart/src/app/header/header.component.html
+++ b/InstaSMart/src/app/header/header.component.html
@@ -1,6 +1,6 @@
     <p style="margin: 0%;">
       <mat-toolbar style="background-color: black;">
-       <a [routerLink]="['']" style="border: 0px; background-color: transparent;" >
+       <a id="home" [routerLink]="['']" style="border: 0px; background-color: transparent;" >
         <!-- <mat-icon>search</mat-icon> -->
         <img src="../../assets/instasmart.jpeg" alt="" height="50px" width="120px">
        </a>
@@ -31,7 +31,7 @@
      
       <div style="width: 2%;"></div>
 
-      <a *ngIf="!isLoggedIn" style="text-decoration: none;cursor: pointer;" [routerLink]="['login']">
+      <a *ngIf="!isLoggedIn" id="login" style="text-decoration: none;cursor: pointer;" [routerLink]="['login']">
       <span style="color: white;">
         <div style="display: flex;">
           <p style="margin: 10%; font-size: 80%;">Hello,SignIn<p>
@@ -61,7 +61,7 @@
       <div style="width: 2%;"></div>
 
 
-<a *ngIf="isLoggedIn" style="text-decoration: none;cursor: pointer;" (click)="logout()">
+<a *ngIf="isLoggedIn" id="logout" style="text-decoration: none;cursor: pointer;" (click)="logout()">
       <span style="color: white;">
         <div style="display: flex;">
         <p style="margin: 10%; font-size: 80%;">LogOut<p>
