--- a/InstaSMart/src/app/login/login.component.html
+++ b/InstaSMart/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 
+<div class="container">
 <div class="card"><div class="card-header">
-    <!-- {{pageTitle}} -->
+    {{pageTitle}}
 </div>
 
 <div class="card-body">
@@ -48,4 +49,6 @@
 
 </div>
 
+
 <p style="color: red; font-size: 20px; font-weight: 150;">{{errorMessage}}</p>
+</div>
