--- a/InstaSMart/src/app/products/product-add/product-add.component.html
+++ b/InstaSMart/src/app/products/product-add/product-add.component.html
@@ -22,6 +22,12 @@
       placeholder="price"
        name="price" class="form-control" id="price">
    </div>
+   <div class="form-group">
+    <label for="oPrice">Old Price:</label>
+    <input type="number" formControlName="oPrice"
+     placeholder="old price"
+      name="oPrice" class="form-control" id="oPrice">
+  </div>
 
 
    <div class="form-group">
